# zkp-auth

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  client.Dockerfile  docker-compose.yaml  server.Dockerfile
.github/workflows/: deploy.yml  docker.yml  rust.yml  terraform-apply.yml  terraform-plan.yml
k8s/: client-ns.yaml  client.yaml  kustomization.yaml  server-ns.yaml  server-svc.yaml  server.yaml
proto/zkp_auth/: auth.proto
src/: client.rs  elliptic_curve.rs  lib.rs  server.rs
terraform/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
