[package]
name = "zkp-auth"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Nikolov <absolutemystery+projzkpauth@gmail.com>"]

[[bin]] # Bin to run the ZKP Auth server
name = "zkpauth-server"
path = "src/server.rs"

[[bin]] # Bin to run the ZKP Auth client
name = "zkpauth-client"
path = "src/client.rs"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2"
prost = "0.13"
rand = "0.8.5"
sha2 = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"


[build-dependencies]
tonic-build = "0.12"
