[package]
name = "zkp-auth"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Nikolov <absolutemystery+projzkpauth@gmail.com>"]

[[bin]] # Bin to run the ZKP Auth server
name = "zkpauth-server"
path = "src/server.rs"

[[bin]] # Bin to run the ZKP Auth client
name = "zkpauth-client"
path = "src/client.rs"

[dependencies]
num-bigint = {version = "0.4.6", features = ["rand"]}
num-traits = "0.2"
prost = "0.13"
rand = "0.8.5"
hex = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
